@@ -217,10 +217,6 @@ main(int ac, char **av)
 	/* Save our own name. */
 	av0 = av[0];
 
-#ifdef SOCKS
-	SOCKSinit(av0);
-#endif /* SOCKS */
-
 	/* Initialize option structure to indicate that no values have been set. */
 	initialize_options(&options);
 
