@@ -1,3 +1,6 @@
+20000207
+ - Removed SOCKS code. Will support through a ProxyCommand.
+
 20000203
  - Fixed SEGVs in authloop, fix from vbzoli@hbrt.hu
  - Add --with-ssl-dir option
